src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Countdown__c</fullName>
        <formula>DATEVALUE(&quot;2018-12-01&quot;)  -   TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Countdown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Federation_ID__c</fullName>
        <formula>FederationIdentifier</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federation ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneTimeActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Process Builder to assign a user to a Public Group</description>
        <label>OneTimeActivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trailblazer__c</fullName>
        <defaultValue>&quot;Yes&quot;</defaultValue>
        <label>Trailblazer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Show_Copado_Tips__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Copado Tips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Work_Manager_Panels__c</fullName>
        <description>JSON containing current user panels on the Backlog</description>
        <label>Work Manager Panels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Non_Platform_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Developer</value>
        </filters>
        <label>Non-Platform Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>